--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -10,6 +10,11 @@
     </div>
 
     <div>Список сообщений</div>
+    <form method="post" action="filter">
+        <input type="text" name="filter" />
+        <button type="submit">Найти</button>
+    </form>
+
     {{#messages}}
     <div>
         <b>{{id}}</b>
